Troubleshooting layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ a {
   cursor: pointer;
   font-size: 1.8rem;
   font-weight: 600;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   outline: 0;
   text-transform: uppercase;
   white-space: nowrap;
@@ -290,6 +290,7 @@ a {
   flex-grow: 1;
   border: 0;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -738,7 +739,7 @@ a {
 
 .block-domain__prices {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
